--- a/BOOKECOM/src/App.css
+++ b/BOOKECOM/src/App.css
@@ -142,3 +142,61 @@ img {
 section {
   padding: 180px 0 !important;
 }
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1420px;
+}
+
+
+/* MEDIA QUERIES 1024px */
+
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 60px !important;
+  }
+
+  h2 {
+    font-size: 40px !important;
+  }
+
+  h3 {
+    font-size: 24px !important;
+  }
+
+
+  h5 span {
+    font-size: 16px !important;
+  }
+
+  section {
+    padding: 100px 0 !important;
+  }
+
+}
+
+/* MEDIA QUERIES 600px */
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 40px !important;
+  }
+
+  h2 {
+    font-size: 30px !important;
+  }
+
+  h3 {
+    font-size: 20px !important;
+  }
+
+  h4 {
+    font-size: 20px !important;
+  }
+
+  section {
+    padding: 70px 0 !important;
+  }
+
+}
