--- a/BOOKECOM/src/Components/Nav/Nav.css
+++ b/BOOKECOM/src/Components/Nav/Nav.css
@@ -9,6 +9,11 @@ nav {
     border: 1px solid var(--color-dark-Ex);
 }
 
+.navShadow {
+    box-shadow: 0 0 4rem rgba(0, 0, 0, 0.2);
+}
+
+
 .nav-container {
     display: flex;
     align-items: center;
@@ -68,6 +73,12 @@ nav {
         width: 50px;
     }
 
+    .menu-button {
+        display: inline-block;
+        color: var(--color-dark);
+        font-size: 18px;
+    }
+
     .nav-links {
         flex-direction: column;
         gap: 0;
@@ -76,11 +87,15 @@ nav {
         top: 90px;
         right: 0;
         position: fixed;
+        perspective: 400px;
     }
 
     .nav-link li {
         height: 100%;
         width: 100%;
+        animation: navAni 600ms forwards;
+        opacity: 0;
+        transform: rotateY(-90deg);
         
     }
     .nav-links a {
@@ -94,11 +109,40 @@ nav {
         overflow: hidden;
         box-shadow: -1rem 5rem 5rem rgba(0, 0, 0, 0.4);
     }
-    .menu-button {
-        display: inline-block;
-        color: var(--color-dark);
-        font-size: 18px;
+
+    @keyframes navAni {
+
+        to {
+            transform: rotateY(0);
+        }
+
     }
+
+    .nav-links li:nth-child(2) {
+        animation-delay: 200ms;
+    }
+
+    .nav-links li:nth-child(3) {
+        animation-delay: 400ms;
+    }
+
+    .nav-links li:nth-child(4) {
+        animation-delay: 600ms;
+    }
+
+    .nav-links li:nth-child(5) {
+        animation-delay: 800ms;
+    }
+
+    .nav-links li:nth-child(6) {
+        animation-delay: 1000ms;
+    }
+
+    .nav-links li:nth-child(7) {
+        animation-delay: 1200ms;
+    }
+
+
 
     .navLinksShow {
         display: flex;
@@ -111,3 +155,10 @@ nav {
     }
 
     /*MEDIA QUERIES  600px */
+
+    @media (max-width: 600px) {
+        .nav-links {
+            width: 18rem;
+        }
+
+    }
