--- a/BOOKECOM/src/App.css
+++ b/BOOKECOM/src/App.css
@@ -18,8 +18,8 @@
   --color-dark-Ex: #E5E3DA;
   --color-light: #E6E9F0;
 
-  --color-bg-1: #F5F5F5;
-  --color-bg-2: #F0F0F0;
+  --color-bg-1: #fcfcfc;
+  --color-bg-2: #eaeaea;
 
   --font-family-prata: 'Prata', serif;
   --font-family-Jakarta: 'Plus Jakarta Sans', sans-serif;;
